@@ -10,23 +10,35 @@ import java.util.Comparator;
 import java.util.List;
 
 public class ProgrammazioneService {
-    private ProiezioneDAO proiezioneDAO;
+    private final ProiezioneDAO proiezioneDAO;
+    private final FilmDAO filmDAO;
+    private final SalaDAO salaDAO;
+    private final SlotDAO slotDAO;
 
     //Costruttore per il testing
-    public ProgrammazioneService(ProiezioneDAO proiezioneDAOMock) {
+    public ProgrammazioneService(ProiezioneDAO proiezioneDAOMock, FilmDAO filmDAOMock, SalaDAO salaDAOMock, SlotDAO slotDAOMock) {
         this.proiezioneDAO = proiezioneDAOMock;
+        this.filmDAO = filmDAOMock;
+        this.salaDAO = salaDAOMock;
+        this.slotDAO = slotDAOMock;
     }
 
     public ProgrammazioneService() {
         this.proiezioneDAO = new ProiezioneDAO();
+        this.filmDAO = new FilmDAO();
+        this.salaDAO = new SalaDAO();
+        this.slotDAO = new SlotDAO();
+    }
+
+    public ProgrammazioneService(ProiezioneDAO proiezioneDAO) {
+        this.proiezioneDAO = proiezioneDAO;
+        this.filmDAO = new FilmDAO();
+        this.salaDAO = new SalaDAO();
+        this.slotDAO = new SlotDAO();
     }
 
     public boolean aggiungiProiezione(int filmId, int salaId, List<Integer> slotIds, LocalDate data) {
         try {
-            FilmDAO filmDAO = new FilmDAO();
-            SalaDAO salaDAO = new SalaDAO();
-            SlotDAO slotDAO = new SlotDAO();
-            ProiezioneDAO proiezioneDAO = new ProiezioneDAO();
             Film film = filmDAO.retrieveById(filmId);
             Sala sala = salaDAO.retrieveById(salaId);
 
@@ -36,7 +48,7 @@ public class ProgrammazioneService {
             if (sala == null) {
                 throw new RuntimeException("Sala non trovata.");
             }
-            if(data.isBefore(LocalDate.now())){
+            if(data == null || data.isBefore(LocalDate.now())){
                 throw new RuntimeException("Errore data.");
             }
             List<Slot> slotsDisponibili = slotDAO.retrieveAllSlots();
@@ -48,13 +60,13 @@ public class ProgrammazioneService {
             if (slotsSelezionati.isEmpty()) {
                 throw new RuntimeException("Nessuno slot valido selezionato.");
             }
-            Slot primoSlot = slotsSelezionati.getFirst();
+            Slot primoSlot = slotsSelezionati.get(0);
             Proiezione proiezione = new Proiezione();
             proiezione.setFilmProiezione(film);
             proiezione.setSalaProiezione(sala);
             proiezione.setDataProiezione(data);
             proiezione.setOrarioProiezione(primoSlot);
-            return proiezioneDAO.create(proiezione);
+            return this.proiezioneDAO.create(proiezione);
 
         } catch (Exception e) {
             e.printStackTrace();
